--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node source/server.js",
+    "start": "env-cmd node source/server.js",
     "dev": "env-cmd nodemon --ignore client.js source/server.js"
   },
   "author": "Jun",
